---
source: spade-tests/src/ast_lowering.rs
---
fn main() -> bool {
    decl x, x;
    let x = false;
    true
}


error: Variable declared more than once
  ┌─ testinput:2:13
  │
2 │     decl x, x;
  │          -  ^ This variable has been declared more than once
  │          │   
  │          Previously declared here
